# rust-generic-user-backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml
.sqlx/: query-0115ed14ba8826f7b588fa21496dc42b9cd8a8ad354ba9f8d0dc51168e210633.json  query-052a9043fedd6f8526a7cee4d3cb827c67194c0d23bf8291750363e98e836caa.json  query-0878781c317ab6ace6d95ab8c3d915dd8b0f3e748b76d4bdb0c9516bdcc7683b.json  query-0c4026822cb7c5b359d5495bed2df0901dcaebe2d2c87922c37cb4f313fbe5e4.json  query-0ed022483d6fc151c3578eb28589542f1398da24487a1180a3607eb905783b78.json  query-16480e4080c175f174149b28bc0f0b2703431dafc65afd9c024ef00723e37a9f.json  query-2a8a5779b28ae643cce384cf58b91800a84cd9de6265e0f18a883ad8811f6655.json  query-308798a0cb30552ae07cb292d06786a2bc923982f454c5c6343f057de918a3a4.json  query-31b99e470bcbb8f9f70aea2d33c1a20da4eb79f4eea62d5b6dc268d77753f689.json  query-37f6f0bcc393a747f70e1c68826414f4353a7568e67d0d80728bf9391d944b76.json  query-383d216657c289d79017b619d87671f9d8bbf42131e1ee1ca0d454a31a8f79e1.json  query-3b8f75dd2657e1ccd4e17d6a535415a2a5ada153fce4d5fafc642718db8983a7.json  query-3fcaf62c3e4f7a9a554d9f3d62b789ecba77f18023a41656e920adbfe41e7785.json  query-44e1d29046a040898327986420d8dab7c8d08fbb618dd45ba4b91da10683f9ed.json  query-5178852d78ee92883cebe91c66afb99b9881943860ed8be7c70246d864ab5b69.json  query-55820d7e93f1f35e3cf857df10735a0622b1b096c735edd2bb785960604a2cfd.json  query-5d5524cbc8d893e5da28681f9b9fd4bf70d1921708b1b8774909a7799e565e0a.json  query-63a6512b394054e993494ce4a7fa17a4bfe521bf4e73f84afa8d9ccf420188a3.json  query-663eb66a5688fcf77f708f5766d478a440122e305814ac678592a4bc5db42149.json  query-7093bb6d4daac494dfd9bac4ac811edfc30080c664699951f2a4a1f4bb5f7b49.json  query-94b977544eb77546849a451b4fe4426f8e3c8244a6a9e3cfb75c1d0714ccf38d.json  query-96a03697d651574386c2b6057a0394f25c5d97d6478fd33fb477bf197def5f80.json  query-9cf0344aa737733de4e5ac7a78c987b0402497a7d4b8f77d1d0fe8da85cf7a44.json  query-a2d374bf0d256c6b3aa3bca79147dff3e5063f4f7c4fe955bd6af6a06415c1cb.json  query-a5e83fb69c14630f50a42972895fca84d58397b3bcd2d6ef4aae2f1b69383c31.json  query-b192d599ad9fb999a9999936f1d9fb4263e0b14bf9a03d9201f1e17e312b2d98.json  query-b779a5a02e9ebd1f15ba902ed87d1195b6d8cb98e21d625eb7212a344b5b4a6e.json  query-d25bf24d6c3c72f41479ce32d5e0bb0ff813ceff5ce9455135611e9168afd683.json  query-d4dbf1deaa781f03daca7696cea06a3fd20e546641e934773463c5ee1968d388.json  query-d650fb4b7f98e4f5b57036f07cfa5a6ba0068716e6bf6c66b5bcfaa8030e5b52.json  query-d9b1fe7adf301d2877e8aa670cd95b24d965979b01cb116a091147a3e62bf5e5.json  query-db645ce4cb4d75dde7429a2c9ee55b66b6d1bc005899ca2a85641c4658fb3efe.json  query-e897ac5bd3e730ef47b4bad9cd1205835b3ad5df336f879b4c9cad229a1e4f35.json  query-eb762f9a514f06fc9cdc8144cdcca2383bb9972a78c2d9fe28b3008d57beabec.json  query-f261c633b1505b8a683799e440d1b1006c34b0c1e8e3acdf80cff2af256eb2c5.json  query-f3b1e98a33b6e0ebfb5133588f6939ada37460aca459750a8dbafe756ea8eb80.json  query-fe70f9cc6612bfbf1fa72fafcb608bda89801bbfc1f3d41f30a967d7cc5cdf03.json  query-ffdf24e7c2f88ba9f28d1d26aaaf871d52204ae7e10df966030242d3eeec6655.json
config/: default.toml  production.toml  test.toml
crates/api/: Cargo.toml
crates/api/src/: config.rs  email.rs  error.rs  lib.rs  main.rs  openapi.rs  state.rs
crates/api/src/commands/: create_admin.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: admin.rs  auth.rs  files.rs  formats.rs  mappings.rs  merge.rs  mod.rs  users.rs
crates/api/tests/: email_gate.rs
crates/auth/: Cargo.toml
crates/auth/src/: jwt.rs  lib.rs  oauth.rs  password.rs  permissions.rs  tokens.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs
crates/core/src/models/: file.rs  format.rs  job.rs  mapping.rs  mod.rs  transformation.rs  user.rs
crates/db/: Cargo.toml
crates/db/src/: files.rs  formats.rs  jobs.rs  lib.rs  mappings.rs  merge_runs.rs  types.rs  users.rs
crates/db/tests/: create_user_conflict.rs
crates/file-processor/: Cargo.toml
crates/file-processor/src/: expr.rs  lib.rs  merge.rs  transform.rs  value.rs
crates/file-processor/src/readers/: csv_reader.rs  excel_reader.rs  mod.rs
crates/file-processor/src/writers/: csv_writer.rs  mod.rs  xlsx_writer.rs
crates/jobs/: Cargo.toml
crates/jobs/src/: lib.rs  storage.rs  worker.rs
crates/jobs/src/handlers/: file_purge.rs  merge_run.rs  mod.rs  purge_sweep.rs
docker/: Dockerfile  docker-compose.yml
docker/postgres-init/: 01-init-auth-schema.sh
migrations/: 0001_init_auth_schema.sql  0001_init_users_and_rbac.sql  0002_uploaded_files.sql  0003_mappings_formats_transforms.sql  0004_jobs_queue.sql  0005_email_verification_tokens.sql  0006_password_reset_tokens.sql  0007_file_headers.sql  0008_output_formats_expr_engine.sql  0009_output_formats_steps.sql
