[package]
name = "generic-auth-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "generic-auth-api"
path = "src/main.rs"

[dependencies]
generic-auth-core = { path = "../core" }
generic-auth-db   = { path = "../db" }
generic-auth-auth = { path = "../auth" }

# Web
axum = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async / runtime
tokio = { workspace = true }

# Serde / config
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# IDs / time
uuid = { workspace = true }
time = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
lettre = { workspace = true }
validator = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
dotenvy = "0.15"
clap = { workspace = true }
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

[dev-dependencies]
tower = { workspace = true }
