[package]
name = "price-merger-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "price_merger_auth"
path = "src/lib.rs"

[dependencies]
price-merger-core = { path = "../core" }
price-merger-db   = { path = "../db" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
