[package]
name = "generic-auth-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "generic_auth_auth"
path = "src/lib.rs"

[dependencies]
generic-auth-core = { path = "../core" }
generic-auth-db   = { path = "../db" }
serde = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }

jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
oauth2 = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }
