[package]
name = "price-merger-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "price_merger_core"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
validator = { workspace = true }
utoipa = { workspace = true }
