[package]
name = "price-merger-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "price_merger_db"
path = "src/lib.rs"

[dependencies]
price-merger-core = { path = "../core" }

sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
