[package]
name = "price-merger-jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[lib]
name = "price_merger_jobs"
path = "src/lib.rs"

[dependencies]
price-merger-core = { path = "../core" }
price-merger-db   = { path = "../db" }
price-merger-file-processor = { path = "../file-processor" }

tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
sqlx = { workspace = true }

aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }
bytes = { workspace = true }
